--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Dependencies
 Flask==1.0.2
 Flask-API==1.0
-Flask-SQLAlchemy==2.3.2
-SQLAlchemy==1.2.12
+Flask-RESTful==0.3.6
+retry==0.9.2
 cloudant==2.10.1
 
 # Runtime
