--- a/manifest.yml
+++ b/manifest.yml
@@ -1,12 +1,12 @@
 ---
 # This manifest deploys a Python Flask application with Cloudant
 applications:
-- name: nyu-customers-app
+- name: customers-app
   memory: 64M
   instances: 2
   timeout: 180
   #random-route: true
-  host: nyu-customers-app
+  host: customers-app
   domain: mybluemix.net
   path: .
   disk_quota: 1024M
