--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,40 @@
+services:
+  - docker
+
 language: python
 python:
-  - "2.7"
+  - '2.7'
 
-# command to install dependencies
-install: "pip install -r requirements.txt"
+before_install:
+  - docker pull couchdb:latest
+  - docker run -d --name couchdb -p 5984:5984 -e COUCHDB_USER=admin -e COUCHDB_PASSWORD=pass
+    couchdb:latest
+  - docker ps -a
+
+install: pip install -r requirements.txt
+
+before_script:
+  - curl -X GET http://localhost:5984/
+  - curl -X PUT http://admin:pass@localhost:5984/test
 
 script:
   - nosetests
+
+after_success:
+  - sonar-scanner -X
+
+
+
+
+#language: python
+#python:
+#  - "2.7"
+
+# command to install dependencies
+#install: "pip install -r requirements.txt"
+
+#script:
+#  - nosetests
 
 #after_success:
 #  - codecov
