--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ coverage==4.5.2
 honcho==1.0.1
 httpie==1.0.0
 factory==1.0
+pytest==4.4.1
+
+# BDD
+behave==1.2.6
+selenium==3.141.0
+compare==0.2b
+requests==2.21.0
